tests/suite/fail/generated/borrow/fail_move_send_s.ny
fn send(x: string) -> void { print(x) }
fn main() {
    let s = "hello"
    send(s)
    print(s) //~ ERROR was moved
}
